# grok-mcp-server

./: .dockerignore  .gitignore  .mcp.json  .ruff.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LAUNCH.md  LICENSE  README.md  SECURITY.md  architecture.md  compose.local-failover.override.yml  compose.yaml  docker-compose.dev.yml  docker-compose.dials.yml  docker-compose.yml  example.env  grok-mcp-helper.sh  install.sh  pyproject.toml  pytest.ini
.agents/: AGENTS.md
.claude/: settings.json
.claude/workflows/: needle-training-campaign.js
.codex/: CODEX.md  computer-use.md  desktop-session-contract.md  directives.md  manifest.json
.codex/automations/: ci-watch.json  dependency-watch.json  release-readiness.json  thread-heartbeat.json
.codex/browser/: node-repl.md
.codex/chat-fragments/: conversation-canvas.html
.codex/chronicle/: triggers.json
.codex/handoff/: schema.json
.codex/hooks/: README.md  hooks.json
.codex/intelligence/: codex-intelligence.json
.codex/mcp/: grok-routing.json
.codex/memory/: active-work.md  context.md
.codex/openai-platform/: api-key-flow.md
.codex/plugins/: capabilities.json
.codex/reviews/: pr-475-python-superiority.md
.codex/schemas/: automation-template.schema.json  chronicle-triggers.schema.json  codex-intelligence.schema.json  grok-routing.schema.json  hooks.schema.json  manifest.schema.json  plugin-capabilities.schema.json  threads-registry.schema.json
.codex/scripts/: validate-codex-namespace.sh
.codex/security/: secret-scan.md
.codex/threads/: registry.json
.cursor/: README.md  hooks.json  mcp.json
.cursor/agents/: overnight-cleanup.md  python-superiority.md
.cursor/hooks/: before-unigrok-agent.py  session-unigrok-env.py
.cursor/rules/: cursor-agent-authorization.mdc  cursor-agent-matrix.mdc  cursor-automations-single-pass.mdc  cursor-bugbot-autofix.mdc  cursor-canvas-artifacts.mdc  cursor-cloud-local-boundary.mdc  cursor-hive-silent-check.mdc  cursor-human-radio.mdc  cursor-push-means-draft-pr.mdc  cursor-python-superiority.mdc  cursor-unigrok-routing.mdc
.gemini/: GEMINI.md  config.json  settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  agent-identities.json  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/instructions/: copilot-html-artifacts.instructions.md
.github/workflows/: ci.yml  codex-approval.yml  grok-review.yml  supervisor-approval.yml
.grok/: README.md
.grok/harvest/: README.md
.grok/hyperparams/: grok-4-1-fast-reasoning.json  grok-imagine-image.json  (+1 more)
.plugin/: plugin.json
docs/: AUTONOMY_INTEL.md  DEOVERFIT.md  GEMMAGROK_DIRECT_TALK_RECEIPT.20260721T160105Z.yaml  OFFLINE_FREE_VARIANT.md  PUBLIC_STRANGER_SURFACE.md  SLEEP_PLANE.md  WASM_DOGFOOD.md  agent-attribution.md  announcement-x.md  architecture.md  chatgpt-github-app.md  cursor-cloud-mcp.md  cursorbench-readiness.md  development.md  ide-setup.md  known-limits.md  offline-local-helper.md  onboarding-extraction.md  python-superiority-loop.html  python-superiority-loop.md  reference.md  release-v0.3.0-draft.md  release-v0.4.0-draft.md  release-v0.4.1-draft.md  release-v0.6.0-draft.md  remote-mcp-deployment.md  render-capability-map.html  swarm-v2-implementation-plan.md  team-readiness.md  threat-model.md  wiki-okf-mirror.md
evals/: __init__.py  __main__.py  baseline.json  cassettes.py  fakes.py  graders.py  runner.py
mcp_ui/: app.js  github-review-v1.html  index.html  markdown.js  styles.css  swarm-sample.json  swarm.html  swarm.js  tokens.css
scripts/: __init__.py  bench_slim_preprompt.py  bench_stable_vs_slim.py  benchmark_deep.py  bootstrap_intelligence_refs.py  check_agent_attribution.py  check_docs.py  check_release_contract.py  check_runtime_parity.py  ci-insider-denylist.sh  dogfood_optimize.py  forge-up  generate_okf.py  github-grok-review.py  install-unigrok-theme  install_unigrok_theme.py  land  land-status  land-status.py  land.py  mint_mcp_service_token.py  parallel_probe.py  persona_bench.py  publish_okf_wiki_mirror.py  run_swarm_evals.py  seed_dev_telemetry.py  smoke_mcp.py  smoke_team_harness.py  soak_nokey.py  superiority_baseline_pareto.py  supervisor_approval.py  swarm_bench.py  triage_optimize.py
src/: __init__.py  cli.py  completion_envelope.py  credentials.py  faq.py  http_server.py  hydration.py  identity.py  intelligence_capsule.py  intelligence_payloads.py  jobs.py  mcp_session_guard.py  metrics.py  principal_xai.py  provider_harvest.py  provider_redaction.py  rag.py  routing.py  semantic_evals.py  server.py  storage.py  subprocess_security.py  utils.py  version.py  workspace_memory.py  xai_credentials.py
tests/: conftest.py  test_agent_attribution.py  test_agent_law_audience_split.py  test_agent_mode_plane_contract.py  test_agentloop_pytest_timeout.py  test_autonomy.py  test_caller_budget.py  test_campaign.py  test_chat_memory_layer.py  test_chat_same_plane_thread.py  test_chat_tools_caller_budget.py  test_claude_md_runtime_contract.py  test_cli.py  test_cli_catalog_oauth_ready.py  test_codeql_contracts.py  test_codex_desktop_session_contract.py  test_compact_history_drift.py  test_completion_envelope.py  test_consistency.py  test_context_pack.py  test_context_safety.py  test_control_center_ui.py  test_control_oauth_bridge.py  test_copilot_html_artifact_instruction.py  test_credentials.py  test_dual_plane_model_discipline.py  test_durable_job_detach.py  test_evals.py  test_export_pr.py  test_faq.py  test_forge_surface.py  test_forget_fact_owner.py  test_gemmagrok_peer.py  test_generate_okf.py  test_git_apply_lock.py  test_git_tools.py  test_git_toplevel_containment.py  test_git_write_gate_honesty.py  test_github_device_auth.py  test_github_review_integration.py  (+93 more)
(+598 files in other folders)
