[project]
name = "mcp-grok"
version = "0.5.1"
description = "Universal local MCP gateway for xAI Grok across IDEs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "grok", "xai", "agents", "codex", "claude", "vscode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.14.2",
    "starlette>=1.3.1",
    "uvicorn>=0.40.0",
    "xai-sdk>=1.17.0",
    "aiosqlite>=0.20.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
unigrok-mcp = "src.cli:main"

[project.urls]
Homepage = "https://github.com/djtelicloud/grok-mcp-server"
Repository = "https://github.com/djtelicloud/grok-mcp-server"
Issues = "https://github.com/djtelicloud/grok-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Code is imported as "src.*" (see src/__init__.py), so ship the src
# directory itself as the top-level package for the entry point to resolve.
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
# The installed HTTP server resolves these assets beside the installed src
# package. Keep the wheel behavior aligned with source and Docker checkouts.
"mcp_ui" = "mcp_ui"
"docs/okf" = "docs/okf"
".grok" = ".grok"
"example.env" = "example.env"

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
