[project]
name = "grok-mcp-server"
version = "1.1.0"
description = "A workspace-neutral dual-plane Grok CLI and xAI API MCP harness"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "httpx==0.28.1",
  "mcp==1.28.1",
  "xai-sdk==1.17.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unigrok_public"]

[dependency-groups]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=0.25,<2",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S603"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"evals/**" = ["S101", "UP046", "UP047", "ASYNC109"]
